<resources>
    <string name="app_name">CITE_IMS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inventory">Inventory</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="users">Users</string>
    <string name="role">Role:</string>
    <string name="username">Username:</string>
    <string name="delete_user">Delete User</string>
    <string name="update_user">Update User</string>
    <string name="add_user">Add User</string>
    <string name="password">Password</string>
    <string name="total_items_0">Total Items: 0</string>
    <string name="total_quantity_0">Total Quantity: 0</string>
    <string name="total_users_0">Total Users: 0</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="add_item">Add Item</string>
    <string name="update_item">Update Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="welcome">Welcome</string>
    <string name="go_to_admin_dashboard">Go to Admin Dashboard</string>
    <string name="go_to_user_dashboard">Go to User Dashboard</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="cite_inventory_management">CITE Inventory Management</string>
    <string name="inventory_logo">Inventory Logo</string>
    <string name="cite_inventory_management_system">CITE Inventory Management System</string>
    <string name="login">Login</string>
    <string name="jmc_logo">JMC Logo</string>
    <string name="cite_logo">CITE Logo</string>
    <string name="welcome_admin">Welcome, Admin</string>
    <string name="enter">Enter</string>
    <string name="profile_management">Profile Management</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="enable_disable_notifications">Enable/Disable Notifications</string>
    <string name="app_preferences">App Preferences</string>
    <string name="theme_selection">Theme Selection</string>
    <string name="account_settings">Account Settings</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="about">About</string>
    <string name="app_version">App Version</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="register">Register</string>
    <string name="role_admin_user">Role (admin/user)</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="show_password">Show Password</string>
    <string name="left_logo">Left Logo</string>
    <string name="right_logo">Right Logo</string>
    <string name="get_started">Get Started!</string>
    <string name="item_image">Item Image</string>
    <string name="back">Back</string>
</resources>