<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textSize="24sp"
            android:paddingBottom="5dp" />

        <!-- Profile Management -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_management"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/changeUsernameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_username" />

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_password" />

        <!-- Notifications -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/enableNotificationsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enable_disable_notifications" />

        <!-- App Preferences -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_preferences"
            android:textSize="18sp"
            android:paddingTop="16dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/themeSelectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/theme_selection" />

        <!-- Account Settings -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_settings"
            android:textSize="18sp"
            android:paddingTop="16dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_out" />

        <Button
            android:id="@+id/deleteAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_account" />

        <!-- About -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="18sp"
            android:paddingTop="16dp"/>

        <Button
            android:id="@+id/appVersionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_version" />

        <Button
            android:id="@+id/termsOfServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/terms_of_service" />

        <Button
            android:id="@+id/privacyPolicyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/privacy_policy" />
    </LinearLayout>
</ScrollView>
