<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Username Input -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

    <!-- Role Input -->
    <EditText
        android:id="@+id/roleEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="role"
        android:hint="@string/role"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <!-- Add Button -->
    <Button
        android:id="@+id/addUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        app:layout_constraintTop_toBottomOf="@id/roleEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp" />

    <!-- Update Button -->
    <Button
        android:id="@+id/updateUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_user"
        app:layout_constraintTop_toBottomOf="@id/roleEditText"
        app:layout_constraintStart_toEndOf="@id/addUserButton"
        android:layout_marginEnd="8dp" />

    <!-- Delete Button -->
    <Button
        android:id="@+id/deleteUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        app:layout_constraintTop_toBottomOf="@id/roleEditText"
        app:layout_constraintStart_toEndOf="@id/updateUserButton" />

    <!-- RecyclerView for User List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/usersRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/addUserButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
